--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Literata:ital,opsz,wght@0,7..72,200..900;1,7..72,200..900&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
   </body>
